--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,7 +13,7 @@ jobs:
 
   build-ios:
 
-    runs-on: flyci-macos-large-latest-m2
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build
