--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,7 +13,7 @@ jobs:
 
   build-ios:
 
-    runs-on: macos-latest
+    runs-on: flyci-macos-xlarge-latest-m1
     steps:
     - uses: actions/checkout@v3
     - name: Build
